[package]
name = "security-core"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = [] }
dotenvy = "0.15.7"
ed25519-compact = "2.2.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "ipnetwork"
] }
tokio = { version = "1.50.1", features = ["full"] }
tonic = { version = "0.14.5", features = ["tls-ring"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
thiserror = "2.0.18"
pasetors = "0.7.8"
chacha20poly1305 = "0.10"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender   = "0.2"
ipnetwork = { version = "0.21.1", features = ["serde"] }
prost = "0.14.3"
tonic-prost = "0.14.5"
rand = "0.8"


[build-dependencies]
tonic-prost-build = "0.14.5"
